# atlas200dk-face-detection-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  conanfile.txt
data/: param.conf
inc/: utility.hpp
inc/ascend/: acl.hpp  media.hpp  presenter.hpp
presenterserver/face_detection/config/: config.conf
presenterserver/face_detection/ui/static/js/: jquery-1.10.2.min.js
src/: CMakeLists.txt  main.cpp
src/ascend/: acl.cpp  acl_dvpp.cpp  acl_model.cpp  media.cpp  presenter.cpp
